# The_Linux_Process_Manager

./: README.md  test.sh
Actix_Backend/: Cargo.toml  main9.rs
Actix_Backend/src/: main.rs
CLI/ProcManager/: Cargo.toml  Processes_Dump.csv  processes.csv
CLI/ProcManager/src/: main.rs
CLI/tuipmgr/: Cargo.toml
CLI/tuipmgr/src/: main.rs
GUI/: ReadMe.txt
GUI/lpm_gui/: package-lock.json  package.json
GUI/lpm_gui/public/: index.html  resumeData.json  sunburstData.json
GUI/lpm_gui/src/: App.js  AppTest.js
GUI/lpm_gui/src/Components/: Footer.js  Header.js
GUI/lpm_gui/src/Components/Charts/: Graph.js  Resources.js  chart.js  style.css
GUI/lpm_gui/src/Components/Charts/Donut/: Donut.js
GUI/lpm_gui/src/Components/Charts/Line/: Graph.js
GUI/lpm_gui/src/Components/Charts/Sunburst/: data.js  main.js  tree.json
GUI/lpm_gui/src/Components/Table/: Table.js
