[package]
name = "astrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
actix-cors = "0.6.4"
procfs = "0.9.1"
sysconf = "0.3.4"
ansi_term = "0.12.1"
sysinfo = "0.29"
sys-info = "0.9"
psutil = "3.2"
num_cpus = "1.13"
