[package]
name = "tui_latest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
procfs = "0.9.1"
sysconf = "0.3.4"
prettytable-rs = "0.10.0"
csv = "1.1.6"
ansi_term = "0.12.1"
sysinfo = "0.28.4"
psutil = "3.2.2"
nix = "0.26.2"
libc = "0.2.93"
signal-hook = "0.3.9"
once_cell = "1.8.0"